# claude-fcsanalysis

./: .gitignore  CLAUDE.md  LICENSE  README.md  color_info.csv  pyproject.toml  run_all.sh  run_test.sh
.claude/commands/: compact-logs.md  export-logs.md
.claude/skills/fcsplot/: EXAMPLES.md  SKILL.md  plot_config_template.yaml
.claude/skills/fcsplot/scripts/: fcs_plot.py
.claude/skills/fcsprocess/: SKILL.md  examples.md
.claude/skills/fcsprocess/scripts/: fcs_main.py
.claude/skills/fcsprocess_mCherryOFF/: SKILL.md
.claude/skills/quant_fluor50/: SKILL.md  examples.md
260104_sample/output/: curated_260104_sample_day3_rep1.csv
examples/260101_EL4_mCherryDisruption/: plot_bar.py  plot_config.yaml  plot_dose_response.py
examples/260102_EL4_GFPTransfection/: plot_config.yaml  plot_dose_response.py  plot_histogram.py
examples/260103_MOLM13_MarkerDisruption/: plot_histogram.py
examples/260104_MOLM13_LentiMarkerDisruption/: plot_histogram.py
examples/260105_HEK293T_GFPDisruption/: plot_bar.py
examples/260105_HEK293T_GFPDisruption/output_fluor50/: args_20260301_234731.json  args_20260302_012116.json  fluor50_summary.csv
examples/260106_HEK293T_mCherry/: plot_bar.py  plot_dose_response.py
fcs_utils/: fluor50.py  plot_config.py  plot_utils.py  primary_gates.py  process_id.py  secondary_gates.py  utils_analysis.py  utils_functions.py  visualization.py
gating_strategies/: default_gates_CytoFlex_EL4.gml  default_gates_CytoFlex_EL4_old.gml  default_gates_CytoFlex_HEK293T.gml  default_gates_ZE5_MOLM13.gml
notebooks/: gate_initialization.ipynb
(+113 files in other folders)
