[tool.poetry]
name = "claude-fcsanalysis"
version = "0.1.0"
description = ""
authors = ["kkyamada <kkyamada1111@gmail.com>"]
readme = "README.md"
packages = [{include = "fcs_utils"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
flowkit = "^1.3.0"
scipy = "^1.11.0"
seaborn = "^0.13.2"
ipykernel = "^7.1.0"
ipywidgets = "^8.1.8"
scikit-learn = "^1.8.0"
ipympl = "^0.10.0"
lxml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

